--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- logo img -->
             <div class="site-logo">
                 <a href="index.html">
-                    <img src="./assets/imgs/Syd.jpg" alt="Syd">
+                    <img src="./assets/imgs/syd.jpg" alt="Syd">
                 </a>
             </div>
         </div>
@@ -42,7 +42,7 @@
     <div class="desktop-header">
         <div class="site-logo">
             <a href="index.html">
-                <img src="./assets/imgs/Syd.jpg" alt="Syd">
+                <img src="./assets/imgs/syd.jpg" alt="Syd">
             </a>
         </div>
         <nav>
