--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </ul>
                     <!-- buttons -->
                     <div class="mt-4">
-                        <a href="./assets/CV/Dung-Nguyen - Content Writer.pdf" class="btn btn-default">Download CV</a>
+                        <a href="./assets/CV/Dung-Nguyen - Content Writer.pdf" target="_blank" class="btn btn-default">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                                         I am Syd Nguyen, novice web developer from Hanoi, Vietnam. I'm currently looking for a front-end developer intern position. I have a basic understanding of HTML, CSS, and JavaScript. If you're hiring or looking for web development services, I'm always available.
                                     </p>
                                     <div class="mt-3">
-                                        <a href="./assets/CV/Dung-Nguyen - Content Writer.pdf" class="btn btn-default">Download CV</a>
+                                        <a href="./assets/CV/Dung-Nguyen - Content Writer.pdf" target="_blank" class="btn btn-default">Download CV</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
